--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -77,7 +77,7 @@
 - date: 2020-06-22
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
-    - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*)"
+    - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors](https://compsocialscience.github.io/summer-institute/2020/materials/research-speed-dating/Speed_Dating.html#/)"
     - name: "10:15 - 11:30 Research Speed Dating Maximally Similar Groups (*Zoom*)"    
     - name: "12:00 - 1:00 Panel discussion on teaching computational social science. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
     - name: "1:15 - 3:30 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
