--- a/_data/2020/bay_area/hero.yml
+++ b/_data/2020/bay_area/hero.yml
@@ -1,3 +1,3 @@
-header_2: "June 15 to June 26, 2020 | UC Berkeley | Virtual event"
-header_3: "Sponsored by Hopelab and Salesforce"
+header_2: "June 15 to July 3, 2020 | UC Berkeley | Virtual event"
+header_3: "Sponsored by Hopelab"
 location: "BAY-SICSS"
