--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -81,7 +81,7 @@
   events:
     - name: "<b>Work on Group Projects</b>"
       time: "09:00 - 11:45"
-    - name: "<b>Lunch and Guest Speaker</b> (Simone Zhang)"
+    - name: "<b>Why's the Power Out? Organizational Responsiveness to Everyday Requests, Questions, and Complaints</b> (Simone Zhang)"
       time: "12:00 - 13:30"
     - name: "<b>Work on Group Projects</b>"
       time: "13:30 - 15:30"
