--- a/_data/2020/los_angeles/schedule.yml
+++ b/_data/2020/los_angeles/schedule.yml
@@ -20,3 +20,50 @@
     - name: "1:15 - 2:45 Group Discussion + [Exercise](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/Group_Exercise_Day_2.html) (In Zoom break-out rooms) "
     - name: "3:00 - 4:00 Guest Speaker: Bryor Snfjella) (In Zoom full group)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours (getting started with Slack, R, Q & A)"
+
+- date: 2020-06-16
+  name: Introduction to Supervised Machine Learning
+  events:
+    - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
+    - name: "10:15 - 11:00 Lecture: Supervised Machine Learning (*In Zoom full group*)"
+    - name: "11:00 - 11:30 Small Group Discussions (*In Zoom break-out room*)"
+    - name: "11:30 - 1:15 Break"
+    - name: "1:30 - 3:00 Group Discussion + Exercise"
+    - name: "3:00 - 3:45 Debrief"
+    
+- date: 2020-06-17
+  name: Introduction to Text Analysis and Unsupervised Machine Learning
+  events:
+    - name: "(ADVANCE) Watch [Dictionary-Based Text Analysis](https://www.youtube.com/watch?v=wSIi2ZRKjaE&feature=youtu.be) (*Zoom*)"
+    - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
+    - name: "10:15 - 11:00 Lecture: Text Mining (*In Zoom full group*)"
+    - name: "11:00 - 11:30 Small Group Discussions (*In Zoom break-out room*)"
+    - name: "11:30 - 1:15 Break"
+    - name: "1:30 - 3:00 Group Discussion + Exercise"
+    - name: "3:00 - 4:00 Guest Speaker: Keith Chen (In Zoom full group)"
+    - name: "4:00 - 4:30 OPTIONAL: Open Office Hours"
+    
+  - date: 2020-06-18
+  name: Introduction to Causal Inference
+  events:
+    - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
+    - name: "10:15 - 11:00 Lecture: Causal Inference (*In Zoom full group*)"
+    - name: "11:00 - 11:30 Small Group Discussions (*In Zoom break-out room*)"
+    - name: "11:30 - 1:15 Break"
+    - name: "1:30 - 3:00 Group Discussion + Exercise (*In Zoom break-out room*)"
+    - name: "3:00 - 3:45 Guest Speaker: Natasha Quadlin (*In Zoom full group*)"
+    - name: "3:45 - 4:00 Speaker Q & A"
+    
+  - date: 2020-06-19
+  name: Ethical Research and Ethical AI
+  events:
+    - name: "(ADVANCE) Watch [Ethics Part 1](https://www.youtube.com/watch?v=A-5QaX5ZiK8&feature=youtu.be) (*Zoom*)"
+    - name: "(ADVANCE) Watch [Ethics Part 2](https://www.youtube.com/watch?v=TT6dOQMKHhA&feature=youtu.be) (*Zoom*)"
+    - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
+    - name: "10:15 - 11:15 Case Study (*In Zoom break-out room*)"
+    - name: "11:15 - 12:00 Break"
+    - name: "12:00-1:15 Panel: AI & Ethics by Sarah Brayne, Emily Dentone, and Alex Hanna (*In Zoom full group*)"
+    - name: "1:15 - 2:00 Debrief and Week 2 Prep"
+    - name: "2:00 - 4:00 Work On Projects"
+
+    
