--- a/_data/2020/los_angeles/schedule.yml
+++ b/_data/2020/los_angeles/schedule.yml
@@ -30,3 +30,18 @@
     - name: "11:30 - 1:15 Break"
     - name: "1:30 - 3:00 Group Discussion + Exercise"
     - name: "3:00 - 3:45 Debrief"
+  
+- date: 2020-06-17
+  name: Introduction to Text Analysis and Unsupervised Machine Learning
+  events:
+    - name: "(ADVANCE) Watch [Dictionary-Based Text Analysis](https://www.youtube.com/watch?v=wSIi2ZRKjaE&feature=youtu.be) (*Zoom*)"
+    - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
+    - name: "10:15 - 11:00 Lecture: Text Mining (*In Zoom full group*)"
+    - name: "11:00 - 11:30 Small Group Discussions (*In Zoom break-out room*)"
+    - name: "11:30 - 1:15 Break"
+    - name: "1:30 - 3:00 Group Discussion + Exercise"
+    - name: "3:00 - 4:00 Guest Speaker: Keith Chen (In Zoom full group)"
+    - name: "4:00 - 4:30 OPTIONAL: Open Office Hours"
+      
+
+  
