--- a/_data/2020/los_angeles/schedule.yml
+++ b/_data/2020/los_angeles/schedule.yml
@@ -43,5 +43,14 @@
     - name: "3:00 - 4:00 Guest Speaker: Keith Chen (In Zoom full group)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours"
       
-
+- date: 2020-06-18
+  name: Introduction to Causal Inference
+  events:
+    - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
+    - name: "10:15 - 11:00 Lecture: Causal Inference (*In Zoom full group*)"
+    - name: "11:00 - 11:30 Small Group Discussions (*In Zoom break-out room*)"
+    - name: "11:30 - 1:15 Break"
+    - name: "1:30 - 3:00 Group Discussion + Exercise (*In Zoom break-out room*)"
+    - name: "3:00 - 3:45 Guest Speaker: Natasha Quadlin (*In Zoom full group*)"
+    - name: "3:45 - 4:00 Speaker Q & A"
   
