Add festival to header links

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@
   url: "/curriculum"
 - name: People
   url: "/people"
+- name: Festival
+  url: "/2020/festival"
 - name: Apply
   type: "button"
   url: "/apply"
