--- a/_data/2020/los_angeles/schedule.yml
+++ b/_data/2020/los_angeles/schedule.yml
@@ -54,3 +54,14 @@
     - name: "3:00 - 3:45 Guest Speaker: Natasha Quadlin (*In Zoom full group*)"
     - name: "3:45 - 4:00 Speaker Q & A"
   
+- date: 2020-06-19
+  name: Ethical Research and Ethical AI
+  events:
+    - name: "ADVANCE Watch [Ethics Part 1](https://www.youtube.com/watch?v=A-5QaX5ZiK8&feature=youtu.be) (*Zoom*)"
+    - name: "ADVANCE Watch [Ethics Part 2](https://www.youtube.com/watch?v=TT6dOQMKHhA&feature=youtu.be) (*Zoom*)"
+    - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
+    - name: "10:15 - 11:15 Case Study (*In Zoom break-out room*)"
+    - name: "11:15 - 12:00 Break"
+    - name: "12:00-1:15 Panel: AI & Ethics by Sarah Brayne, Emily Dentone, and Alex Hanna (*In Zoom full group*)"
+    - name: "1:15 - 2:00 Debrief and Week 2 Prep"
+    - name: "2:00 - 4:00 Work On Projects"
