--- a/_data/2020/los_angeles/schedule.yml
+++ b/_data/2020/los_angeles/schedule.yml
@@ -18,7 +18,7 @@
     - name: "10:45 - 11:45 Lecture: Intro to Digital Trace Data and Group Exercise (*In Zoom full group*)"
     - name: "11:45 - 1:15 Break"
     - name: "1:15 - 2:45 Group Discussion + [Exercise](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/Group_Exercise_Day_2.html) (In Zoom break-out rooms) "
-    - name: "3:00 - 4:00 Guest Speaker: Bryor Snfjella) (In Zoom full group)"
+    - name: "3:00 - 4:00 Guest Speaker: Bryor Snefjella) (In Zoom full group)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours (getting started with Slack, R, Q & A)"
 
 - date: 2020-06-16
@@ -34,7 +34,7 @@
 - date: 2020-06-17
   name: Introduction to Text Analysis and Unsupervised Machine Learning
   events:
-    - name: "(ADVANCE) Watch [Dictionary-Based Text Analysis](https://www.youtube.com/watch?v=wSIi2ZRKjaE&feature=youtu.be) (*Zoom*)"
+    - name: "(ADVANCE) Watch [Dictionary-Based Text Analysis](https://www.youtube.com/watch?v=wSIi2ZRKjaE&feature=youtu.be)"
     - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
     - name: "10:15 - 11:00 Lecture: Text Mining (*In Zoom full group*)"
     - name: "11:00 - 11:30 Small Group Discussions (*In Zoom break-out room*)"
@@ -57,8 +57,8 @@
 - date: 2020-06-19
   name: Ethical Research and Ethical AI
   events:
-    - name: "ADVANCE Watch [Ethics Part 1](https://www.youtube.com/watch?v=A-5QaX5ZiK8&feature=youtu.be) (*Zoom*)"
-    - name: "ADVANCE Watch [Ethics Part 2](https://www.youtube.com/watch?v=TT6dOQMKHhA&feature=youtu.be) (*Zoom*)"
+    - name: "ADVANCE Watch [Ethics Part 1](https://www.youtube.com/watch?v=A-5QaX5ZiK8&feature=youtu.be)"
+    - name: "ADVANCE Watch [Ethics Part 2](https://www.youtube.com/watch?v=TT6dOQMKHhA&feature=youtu.be)"
     - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
     - name: "10:15 - 11:15 Case Study (*In Zoom break-out room*)"
     - name: "11:15 - 12:00 Break"
