--- a/_data/2020/los_angeles/schedule.yml
+++ b/_data/2020/los_angeles/schedule.yml
@@ -65,3 +65,38 @@
     - name: "12:00-1:15 Panel: AI & Ethics by Sarah Brayne, Emily Dentone, and Alex Hanna (*In Zoom full group*)"
     - name: "1:15 - 2:00 Debrief and Week 2 Prep"
     - name: "2:00 - 4:00 Work On Projects"
+
+ - date: 2020-06-22
+  name: Research Projects 
+  events:
+    - name: "10:00 - 12:00 Group Work Time (*Zoom*)"
+    - name: "12:00 - 1:30 Break"
+    - name: "1:30-3:00 Participant Flash Talks (Optional Participation; Required Attendance)"
+
+- date: 2020-06-23
+  name: Group Work Time 
+  events:
+    - name: "10:00 - 12:00 Group Work Time (*Zoom*)"
+    - name: "12:00 - 1:30 Break"
+    - name: "1:30-3:00 Group Work Time; Office Hours by Appointment (*Zoom*)"
+
+- date: 2020-06-24
+  name: Group Work Time 
+  events:
+    - name: "10:00 - 12:00 Group Work Time (*Zoom*)"
+    - name: "12:00 - 1:30 Break"
+    - name: "1:30-3:00 Group Work Time; Office Hours by Appointment (*Zoom*)"
+
+- date: 2020-06-25
+  name: Group Work Time 
+  events:
+    - name: "10:00 - 12:00 Group Work Time (*Zoom*)"
+    - name: "12:00 - 1:30 Break"
+    - name: "1:30-3:00 Group Work Time; Office Hours by Appointment (*Zoom*)"
+
+- date: 2020-06-26
+  name: Group Work Time 
+  events:
+    - name: "10:00 - 12:00 Group Work Time (*Zoom*)"
+    - name: "12:00 - 1:30 Break"
+    - name: "1:30-3:00 Group Work Time; Office Hours by Appointment (*Zoom*)"
