--- a/_data/2020/maastricht/participants.yml
+++ b/_data/2020/maastricht/participants.yml
@@ -26,6 +26,10 @@
   image: /assets/images/maas-BilgecagAydogdu.jpg
   bio: "Bilgecag Aydogdu is a PhD candidate at Utrecht University, in Information and Computing Sciences Faculty. Before starting his Ph.D., he studied political science, economics, development studies and data science in Paris and in Istanbul. His PhD thesis focuses on gaining insights on migration patterns to Europe through the usage of mobile phone data. He is interested in making social impact and evidence-based policy making, which leverages on private data sources. He is excited to take part in growing network of computational social scientists!"
 
+- name: "Elena Sidorova"
+  image: /assets/images/maas-ElenaSidorova.jpg
+  bio: "Elena Sidorova is a Junior Researcher of the Institute for Industrial and Market Studies at the Higher School of Economics (HSE), Moscow, Russia. She is a Ph.D. student at the HSE and her sphere of academic interest focuses on Empirical Legal Research.  She uses econometric analysis as well as machine learning methods to deliver evidence-based insights to the way of decision-making by judges and parties in commercial legal processes."
+
 - name: "Evangelia Nissioti"
   image: /assets/images/maas-EvangeliaNissioti.jpg
   bio: "Evangelia Nissioti is a Ph.D. candidate at the Erasmus Mundus Doctorate Program on Law and Economics. She has attended research semesters in Universita di Bologna and Erasmus University of Rotterdam while her home university is the University of Hamburg. She has a legal background with a bachelor in law from the National Kapodistrian University of Athens and is an admitted lawyer to the Athens Bar Association. Her research interests revolve around the economic analysis of dispute resolution systems and more specifically, her PhD project deals with the question of whether mediation can generate more efficient outcomes than litigation and negotiation. She holds a Joint Degree Master LL.M/M.A. on Law and Economics from the EMLE Program and is trained in empirical analysis and the conduct of experiments."
