--- a/_data/2020/maastricht/schedule.yml
+++ b/_data/2020/maastricht/schedule.yml
@@ -23,7 +23,7 @@
     - name: "12.00 - 13.00 Guest speaker [Günes Acar](https://compsocialscience.github.io/summer-institute/2020/maastricht/people) (*Zoom*)"
     - name: "13.00 - 14.00 Small group lunches (*Zoom*)"
     - name: "14.00 - 14.30 Break"
-    - name: "14.45 - 15.00 Introduction to the group exercise: [Lesson plan](https://compsocialscience.github.io/summer-institute/blob/master/2020/materials/maastricht/day-2-digital-trace-data-maastricht.md) (*Zoom*)"
+    - name: "14.45 - 15.00 Introduction to the group exercise: [Lesson plan](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/maastricht/day-2-digital-trace-data-maastricht.md) (*Zoom*)"
     - name: "15.00 - 18.00 Group exercise (*Zoom*)"
     - name: "18.00 - 19.00 Whole group debrief about group exercise (*Zoom*)"
     
