--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -13,70 +13,70 @@
 - date: 2020-06-15
   name: Introduction and Ethics
   events:
-    - name: "10:00 - 10:30 Introduction and logistics (*Zoom*)"
-    - name: "10:30 - 11:30 Small group discusions (*Zoom*)"
+    - name: "10:00 - 10:30 Introduction and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:30 - 11:30 Small group discusions [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "12:00 - 1:00 Small group lunches (optional) [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:30 Break"
-    - name: "1:30 - 1:45 Introduction to the group exercise (*Zoom*)"
-    - name: "1:45 - 2:45 Small group discussion of [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
-    - name: "2:45 - 3:15 Whole group debrief about case study (*Zoom*)"
-    - name: "3:15 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "1:30 - 1:45 Introduction to the group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "1:45 - 2:45 Small group discussion of [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "2:45 - 3:15 Whole group debrief about case study [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:15 - 3:45 Debrief and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
 
 - date: 2020-06-16
   name: Collecting Digital Trace Data
   events:
-    - name: "10:00 - 10:15 Logistics (*Zoom*)"
-    - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:15 - 11:30 Small group discussions [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "12:00 - 1:00 Small group lunches (optional) [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 1:30 Introduction to the group exercise (*Zoom*)"
-    - name: "1:30 - 3:00 Group exercise (*Zoom*)"
-    - name: "3:00 - 3:15 Whole group debrief about group exercise (*Zoom*)"
-    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "1:15 - 1:30 Introduction to the group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "1:30 - 3:00 Group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:00 - 3:15 Whole group debrief about group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:30 - 3:45 Debrief and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-17
   name: Automated Text Analysis
   events:
-    - name: "10:00 - 10:15 Logistics (*Zoom*)"
-    - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:15 - 11:30 Small group discussions [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "12:00 - 1:00 Small group lunches (optional) [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 1:30 Introduction to the group exercise (*Zoom*)"
-    - name: "1:30 - 3:00 Group exercise (*Zoom*)"
-    - name: "3:00 - 3:15 Whole group debrief about group exercise  (*Zoom*)"
-    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "1:15 - 1:30 Introduction to the group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "1:30 - 3:00 Group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:00 - 3:15 Whole group debrief about group exercise  [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:30 - 3:45 Debrief and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-18
   name: Surveys in the Digital Age
   events:
-    - name: "10:00 - 10:15 Logistics (*Zoom*)"
-    - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
-    - name: "10:30 - 11:30 Morning group exercise  (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:15 - 10:30 Introduction to the group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:30 - 11:30 Morning group exercise  [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "12:00 - 1:00 Small group lunches (optional) [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 3:00 Afternoon group excercise (*Zoom*)"
-    - name: "3:00 - 3:15 Whole group debrief about group exercise  (*Zoom*)"
-    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "1:15 - 3:00 Afternoon group excercise [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:00 - 3:15 Whole group debrief about group exercise  [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:30 - 3:45 Debrief and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-19
   name: Machine Learning
   events:
-    - name: "10:00 - 10:15 Logistics (*Zoom*)"
-    - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
-    - name: "10:30 - 11:30 Morning group exercise  (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:15 - 10:30 Introduction to the group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:30 - 11:30 Morning group exercise  [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "12:00 - 1:00 Small group lunches (optional) [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 3:00 Afternoon group excercise (*Zoom*)"
-    - name: "3:00 - 3:15 Whole group debrief about group exercise  (*Zoom*)"
-    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "1:15 - 3:00 Afternoon group excercise [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:00 - 3:15 Whole group debrief about group exercise  [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:30 - 3:45 Debrief and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-20
