--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -11,7 +11,7 @@
     - name: "Friday: Machine Learning"
     
 - date: 2020-06-15
-  name: Introduction and Ethics
+  name: "[Introduction and Ethics](https://compsocialscience.github.io/summer-institute/curriculum#day_1)"
   events:
     - name: "10:00 - 10:30 Introduction and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:30 - 11:30 Small group discusions [Zoom](https://uqam.zoom.us/j/7123857324)"
@@ -24,7 +24,7 @@
     - name: "3:15 - 3:45 Debrief and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
 
 - date: 2020-06-16
-  name: Collecting Digital Trace Data
+  name: "[Collecting Digital Trace Data](https://compsocialscience.github.io/summer-institute/curriculum#day_2)"
   events:
     - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:15 - 11:30 Small group discussions [Zoom](https://uqam.zoom.us/j/7123857324)"
@@ -38,7 +38,7 @@
     - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-17
-  name: Automated Text Analysis
+  name: "[Automated Text Analysis](https://compsocialscience.github.io/summer-institute/curriculum#day_3)"
   events:
     - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:15 - 11:30 Small group discussions [Zoom](https://uqam.zoom.us/j/7123857324)"
@@ -52,7 +52,7 @@
     - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-18
-  name: Surveys in the Digital Age
+  name: "[Surveys in the Digital Age](https://compsocialscience.github.io/summer-institute/curriculum#day_4)"
   events:
     - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:15 - 10:30 Introduction to the group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
@@ -66,7 +66,7 @@
     - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-19
-  name: Machine Learning
+  name: "[Machine Learning](https://compsocialscience.github.io/summer-institute/curriculum#day_4)"
   events:
     - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:15 - 10:30 Introduction to the group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
