--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -8,11 +8,12 @@
     - name: "Tuesday: Collecting Digital Trace Data"
     - name: "Wednesday: Automated Text Analysis"
     - name: "Thursday: Surveys in the Digital Age"
-    - name: "Friday: Machine Learning"
+    - name: "Friday: Unsupervised Machine Learning and Social Network Analysis"
     
 - date: 2020-06-15
-  name: "[Introduction and Ethics](https://compsocialscience.github.io/summer-institute/curriculum#day_1)"
+  name: Introduction and Ethics
   events:
+    - name: "[Ethics](https://compsocialscience.github.io/summer-institute/curriculum#day_1)"
     - name: "10:00 - 10:30 Introduction and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:30 - 11:30 Small group discusions [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
@@ -24,8 +25,9 @@
     - name: "3:15 - 3:45 Debrief and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
 
 - date: 2020-06-16
-  name: "[Collecting Digital Trace Data](https://compsocialscience.github.io/summer-institute/curriculum#day_2)"
+  name: Collecting Digital Trace Data
   events:
+    - name: "[Collecting Digital Trace Data](https://compsocialscience.github.io/summer-institute/curriculum#day_2)"
     - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:15 - 11:30 Small group discussions [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
@@ -35,11 +37,12 @@
     - name: "1:30 - 3:00 Group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "3:00 - 3:15 Whole group debrief about group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "3:30 - 3:45 Debrief and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
-    - name: "4:00 - 5:30 Possible guest speaker"
+    - name: "4:00 - 5:30 Guest speaker : [Stephane Helleringer](https://www.jhsph.edu/faculty/directory/profile/3136/st-phane-helleringer)"
 
 - date: 2020-06-17
-  name: "[Automated Text Analysis](https://compsocialscience.github.io/summer-institute/curriculum#day_3)"
+  name: Automated Text Analysis
   events:
+    - name: "[Automated Text Analysis](https://compsocialscience.github.io/summer-institute/curriculum#day_3)"
     - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:15 - 11:30 Small group discussions [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
@@ -52,8 +55,9 @@
     - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-18
-  name: "[Surveys in the Digital Age](https://compsocialscience.github.io/summer-institute/curriculum#day_4)"
+  name: Surveys in the Digital Age
   events:
+    - name: "[Surveys in the Digital Age](https://compsocialscience.github.io/summer-institute/curriculum#day_4)"
     - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:15 - 10:30 Introduction to the group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:30 - 11:30 Morning group exercise  [Zoom](https://uqam.zoom.us/j/7123857324)"
@@ -63,11 +67,13 @@
     - name: "1:15 - 3:00 Afternoon group excercise [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "3:00 - 3:15 Whole group debrief about group exercise  [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "3:30 - 3:45 Debrief and logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
-    - name: "4:00 - 5:30 Possible guest speaker"
+    - name: "4:00 - 5:30 Guest speaker : [Will Hamilton](https://williamleif.github.io/)"
 
 - date: 2020-06-19
-  name: "[Machine Learning](https://compsocialscience.github.io/summer-institute/curriculum#day_4)"
+  name: Unsupervised Machine Learning and Social Network Analysis
   events:
+    - name: "[Unsupervised Machine Learning](https://compsocialscience.github.io/summer-institute/curriculum#day_5)"
+    - name: "[Discussion on Network Analysis](http://codingsocialscience.org/book/r1/node56.html)"
     - name: "10:00 - 10:15 Logistics [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:15 - 10:30 Introduction to the group exercise [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:30 - 11:30 Morning group exercise  [Zoom](https://uqam.zoom.us/j/7123857324)"
