--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -7,10 +7,8 @@
       time: "12:30 - 13:00"
     - name: "<b>Activity on Ethics</b>"
       time: "13:00 - 15:00"
-    - name: "<b>Break</b>"
-      time: "15:00 - 15:15"
-    - name: "<b>Introduce Digital Trace Data and Debrief</b>"
-      time: "15:15 - 16:30"
+    - name: "<b>Debrief</b>"
+      time: "15:00 - 15:45"
 
 
 - date: 2020-06-16
