--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -23,9 +23,9 @@
     - name: "10:00 - 10:30 Introduction to SICSS and logistics by [Dr. Vissého Adjiwanou](https://sociologie.uqam.ca/corps-professoral/professeurs-es/professeur/adjiwanou.visseho/) in [Zoom](https://uqam.zoom.us/j/7123857324)"
     - name: "10:30 - 11:30 Small group discusions [English lesson plan](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day1-intro-ethics/small_group_discussions.md) or [French lesson plan](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day1-intro-ethics/discussion_de_petits_groupe.md) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "12:00 - 1:00 Small group lunches (optional) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:30 Break"
-    - name: "1:30 - 1:45 Introduction to the group exercise in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "1:30 - 1:45 Introduction to the group exercise [English lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day1-intro-ethics/participants_activity_english.md) or [French lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day1-intro-ethics/plan_de_cours.md) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "1:45 - 2:45 Small group discussion of [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "2:45 - 3:15 Whole group debrief about case study in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "3:15 - 3:45 Debrief and logistics in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
@@ -50,7 +50,7 @@
   events:
     - name: "ADVANCE watch [Automated Text Analysis](https://compsocialscience.github.io/summer-institute/curriculum#day_3)"
     - name: "10:00 - 10:15 Logistics in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
-    - name: "10:15 - 11:30 Small group discussions [Zoom](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:15 - 11:30 Small group discussions in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Small group lunches (optional) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:15 Break"
