--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -34,7 +34,7 @@
   name: Collecting Digital Trace Data
   events:
     - name: "ADVANCE watch [Collecting Digital Trace Data](https://compsocialscience.github.io/summer-institute/curriculum#day_2)"
-    - name: "10:00 - 10:15 Logistics in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:00 - 10:15 Logistics and Intro to [Group Exercise (English version)](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/Group_Exercise_Day2.md) or [French version](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/exercice_2.md) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "10:15 - 11:30 Small group discussions in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Small group lunches (optional) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
