--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -45,6 +45,10 @@
 - name: Yang Teoh
   image: /2020/montreal/images/Yang_Photo.jpeg
   bio: "Yang Teoh is a PhD student at the Department of Psychology, University of Toronto. He is interested in the interpersonal emotional processes that guide and sustain prosocial behaviour. HIs research mainly focuses on the design and application of computational algorithms that capture and explain psychological processes as they unfold during social interactions." 
+
+- name: Anagha Uppal 
+  image: /2020/montreal/images/Anagha Uppal.jpeg   
+  bio: "Anagha Uppal has been involved in the Computational Social Science movement since 2015 when she declared it her undergraduate self-designed major. Now a MA/PhD student in Geography (geographic information science), she is developing as an early career researcher answering environmental and humanistic social science questions from a spatial data science lens. She also has experience with large and small nonprofits, including with the American Red Cross, and hopes to spend her career in effective altruism nonprofit spaces." 
   
 - name: Robert Vidigal
   image: /2020/montreal/images/robert-wp.jpg
