--- a/_data/2020/bay_area/schedule.yml
+++ b/_data/2020/bay_area/schedule.yml
@@ -1,12 +1,12 @@
-- date: All times are in Pacific Daylight Time
+- date: All times are in Pacific Standard Time
 
 - date: 2020-06-15
   name: "Introduction and Ethics"
   events:
     - name: "1:00 - 1:20 Welcome to BAY-SICSS and Logistics (*Zoom*)"
-    - name: "1:20 - 2:00 Introductory remarks from David Harding, UC Berkeley D-Lab (*Zoom*)"
-    - name: "2:00 - 3:00 Small Group Discussion [Lesson Plan](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/small_group_discussions.md)"
-    - name: "3:00 - 3:45 Break"
+    - name: "1:20 - 1:45 Introductory remarks from David Harding, UC Berkeley D-Lab (*Zoom*)"
+    - name: "1:45 - 2:45 Small Group Discussion [Lesson Plan](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/small_group_discussions.md)"
+    - name: "2:45 - 3:45 Break"
     - name: "3:45 - 4:00 Introduction to the group exercise (*Zoom*)"
     - name: "4:00 - 4:45 Small group discussion of [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
     - name: "4:45 - 5:00 Whole group debrief about case study (*Zoom*)"
