--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -118,7 +118,7 @@ participants:
       
     - name: Carlos Denner
       image: /assets/images/carlos_denner.jpg
-      bio: "Carlos Denner is an associate professor at the University of Brasilia, and a senior researcher at the Université de Montréal (St-Justine Hospital). He has done research on open source software for the last 15 years to understand the dynamics of collaboration using various statistical models and tools. Nowadays, Carlos works in research capable of incorporating elements of image and text processing, as well as live geo-tagged big data to deliver decision support systems for educational and clinical purposes that prime for their design."
+      bio: "Carlos Denner is a visiting professor at UC Berkeley Engineering's Center for Entrepreneurship & Technology (SCET), an associate professor at the University of Brasilia, and a senior researcher at the Université de Montréal (St-Justine Hospital). He has done research on open source software for the last 15 years to understand the dynamics of collaboration using various statistical models and tools. Nowadays, Carlos works in research capable of incorporating elements of image and text processing, as well as live geo-tagged big data to deliver decision support systems for educational and clinical purposes that prime for their design."
       
     - name: Cheng Ren
       image: /assets/images/cheng_ren.png
